# mailpipe

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
postfix/: main.cf  master.cf  transport
rustpipe/: Cargo.toml  README.md
rustpipe/src/: main.rs
