[package]
name = "rustpipe"
version = "0.1.0"
edition = "2021"
description = "Postfix pipe helper for lightweight inbound email handoff"
license = "Apache-2.0"
repository = "https://github.com/brsnik/mailpipe"

[dependencies]
anyhow = "1.0.102"
mailparse = "0.16.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.60", features = ["derive"] }
